FIX: Choices input layout bug in IE11

--- a/app/assets/stylesheets/common/select-kit/multi-select.scss
+++ b/app/assets/stylesheets/common/select-kit/multi-select.scss
@@ -138,7 +138,7 @@
         outline: none;
         line-height: normal;
         overflow: auto;
-        flex: unset;
+        flex: 0 1 auto;
         flex-wrap: nowrap;
 
         .name {
